@@ -19,7 +19,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -61,7 +60,7 @@ public class ReviewServiceImpl implements ReviewService {
         List<Review> reviews = reviewRepository.findAllByReservation_User_Id(userId);
         return reviews.stream()
                 .map(reviewMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -73,7 +72,7 @@ public class ReviewServiceImpl implements ReviewService {
         List<Review> reviews = reviewRepository.findAllByReservation_Room_Id(roomId);
         return reviews.stream()
                 .map(reviewMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
